Changed banner on frontpage

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 layout: default
 title: Home
 ---
-
 <p class="message">
+  Because of COVID-19, Pixelbar shifted it's activities to online-only for now. Please read the [Corona Policy](/coronapolicy) for the current rules.
+</p>
+<!--<p class="message">
   We are open almost every wednesday (from 7 pm) and saturday (from 2 pm)<br />
   Feel free to drop on by whenever we're open.
-</p>
+</p>-->
 
 <div class="posts">
   {% for post in paginator.posts %}
