Updated the Corona-header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 <p class="message">
-  Because of COVID-19, Pixelbar shifted it's activities to online-only for now. Please read the <a href="/coronapolicy/">Corona Policy</a> for the current rules.
+  Because of COVID-19, Pixelbar shifted it's activities to mostly online for now. Please read the <a href="https://wiki.pixelbar.nl/index.php/Corona/">Corona Policy</a> for the current rules.
 </p>
 <!--<p class="message">
   We are open almost every wednesday (from 7 pm) and saturday (from 2 pm)<br />
