--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@ layout: default
 title: Home
 ---
 
-<p class="message">
+<!--<p class="message">
   We are open almost every wednesday (from 7 pm) and saturday (from 2 pm)<br />
   Feel free to drop on by whenever we're open.
+</p>-->
+<p class="message">
+  Pixelbar needs your help!
+
+  After a disaster struck last [28th of June 2023](https://pixelbar.nl/2023/06/28/Pixelbar-has-experienced-an-unexpected-issue/), we are asking everyone to help rebuilding the physical space for this awesome community!
+
+  Donation link via QR Code: ![](public/images/shared/28062023-Pixelbar-Disaster-Donations.png)
 </p>
 
 <div class="posts">
