--- a/hello/index.html
+++ b/hello/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+  <html>
+    <head>
+  		<title>Flyer</title>
+  			<meta charset="UTF-8" />
+  			<meta http-equiv="refresh" content="1; URL=https://www.pixelbar.nl/" />
+  	</head>
+  </html>
 
